<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">autom8</string>
    <string name="edit_connection_name">edit connection</string>
    <string name="edit_create_connection">setup connection</string>
    <string name="connection_manager_name">connection manager</string>
    <string name="verify_server_name">verify server</string>
    <string name="settings_name">settings</string>
    <string name="service_name">autom8 ClientService</string>

    <string name="settings_section_service">Service settings</string>
    <string name="settings_section_advanced">Advanced settings</string>
    <string name="setting_run_in_background_title">Run in the background</string>
    <string name="setting_run_in_background_desc">Keep the autom8 service running, and show a notification.</string>
    <string name="setting_security_notifications_title">Security notifications</string>
    <string name="setting_security_notifications_desc">Show security alerts. Keeps a persistent connection and uses more battery.</string>
    <string name="setting_start_at_boot_title">Start automatically</string>
    <string name="setting_start_at_boot_desc">Automatically start the autom8 service when the phone boots.</string>
    <string name="setting_connection_manager_title">Connection manager</string>
    <string name="setting_connection_manager_desc">Create and edit multiple connection profiles.</string>
    <string name="setting_translucency_title">Enable translucency</string>
    <string name="setting_translucency_desc">Display main screen with wallpaper translucency.</string>
    <string name="setting_ringtone_title">Notification ringtone</string>
    <string name="setting_ringtone_desc">Change the default security alert notification ringtone.</string>
    <string name="setting_heartbeat_title">Heartbeat</string>
    <string name="setting_heartbeat_desc">How often a heartbeat should be sent to the server (in minutes).</string>
    <string name="setting_version_title">Version</string>
    <string name="setting_version_desc">v%1$s (build %2$d)</string>

    <string name="running_notification_desc">Tap here to control your devices</string>
    <string name="security_notification_title">Security alert</string>
    <plurals name="security_notification_desc">
        <item quantity="one">There is %1$s uncleared security alert.</item>
        <item quantity="other">There are %1$s uncleared security alerts.</item>
    </plurals>

    <plurals name="connected_device_count">
        <item quantity="one">controlling 1 device.</item>
        <item quantity="other">controlling %d devices</item>
    </plurals>

    <string name="background_notification_title">autom8</string>
    <string name="background_notification_desc">Tap here to control your devices</string>

    <string name="status_disconnected">disconnected</string>
    <string name="status_connecting">connecting...</string>
    <string name="status_authenticating">authenticating...</string>
    <string name="status_connected">connected</string>

    <string name="device_status_on">on</string>
    <string name="device_status_off">off</string>
    <string name="device_status_armed">armed</string>
    <string name="device_status_alert">alert</string>

    <string name="device_type_lamp">lamp module</string>
    <string name="device_type_appliance">appliance module</string>
    <string name="device_type_sensor">security sensor</string>
    <string name="device_type_unknown">unknown device</string>

    <string name="menu_list_flat">all devices</string>
    <string name="menu_list_grouped">grouped by area</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_connection">Connection</string>
    <string name="menu_reconnect">Reconnect</string>

    <string name="button_yes">Yes</string>
    <string name="button_no">No</string>
    <string name="button_ok">OK</string>
    <string name="button_cancel">Cancel</string>
    <string name="button_close">Close</string>
    <string name="button_continue">Continue</string>
    <string name="button_edit_connections">Edit Connections</string>
    <string name="button_verify">Verify</string>

    <string name="device_group_no_groups">(not categorized)</string>

    <string name="dlg_welcome_title">Welcome to autom8!</string>
    <string name="dlg_welcome_desc">To get started you need to create a connection to the computer running the autom8 server.\n\nPress continue and configure this connection now.</string>
    <string name="dlg_incorrect_pw_title">Incorrect password</string>
    <string name="dlg_incorrect_pw_desc">The server did not accept your password. Change your password now?</string>
    <string name="dlg_reset_alert_title">Confirm reset alert</string>
    <string name="dlg_reset_alert_desc">Are you sure you want to reset this security alert?</string>
    <string name="dlg_disarm_title">Confirm sensor disarm</string>
    <string name="dlg_disarm_desc">Are you sure you want to disarm this security sensor?</string>
    <string name="dlg_lamp_brightness_title">Set lamp brightness</string>
    <string name="dlg_delete_connection_title">Confirm delete</string>
    <string name="dlg_delete_connection_desc">Are you sure you want to delete this connection?</string>
    <string name="dlg_invalid_connection_params_title">Invalid settings</string>
    <string name="dlg_invalid_connection_params_desc">Please make sure the connection name, host, port and password are valid.</string>
    <string name="dlg_translucency_warning_title">Warning</string>
    <string name="dlg_translucency_warning_desc">The main window needs to be closed before this setting will take effect.\n\nI will do this for you now.</string>

    <string name="edit_connection_name_hint">Connection name (e.g. \'home\')</string>
    <string name="edit_connection_host_hint">Hostname or IP address of server</string>
    <string name="edit_connection_port_hint">Port number (usually 7901)</string>
    <string name="edit_connection_password_hint">Password</string>

    <string name="connection_mgr_button_edit">edit</string>
    <string name="connection_mgr_button_delete">del</string>
    <string name="connection_mgr_button_add_connection">New connection</string>
    <string name="connection_mgr_no_connections">No connections.\nPlease add a new connection below.</string>

    <string name="verify_connection_header">Before you can start controlling your devices, you need to verify the server\'s fingerprint.\n\nLook at the fingerprint below, and ensure it\'s the same as the fingerprint reported by your server.\n\nIf the fingerprints do NOT match, it means that someone may be listening in on your connection.\n\nPress the "verify" button to confirm this is your server.\n</string>
    <string name="verify_connection_name">Connection name:</string>
    <string name="verify_connection_host">Hostname:</string>
    <string name="verify_connection_fingerprint">Fingerprint:</string>

    <string name="pref_run_in_background">runInBackground</string>
    <string name="pref_security_notifications">securityNotifications</string>
    <string name="pref_default_connection_id">defaultConnectionId</string>
    <string name="pref_start_at_boot">startAtBoot</string>
    <string name="pref_hearbeat_interval">heartbeatInterval</string>
    <string name="pref_translucency_enabled">translucencyEnabled</string>
    <string name="pref_connection_manager">connectionManager</string>
    <string name="pref_notification_ringtone">notificationRingtone</string>
    <string name="pref_devices_view_type">devicesViewType</string>
    <string name="pref_version">version</string>

    <string name="pager_overlay_reconnect">reconnect</string>
    <string name="pager_overlay_setup_connection">setup your connection</string>
    <string name="pager_overlay_connecting">connecting...</string>
</resources>
