<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/EditConnectionView"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">

    <include layout="@layout/toolbar"/>

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:padding="6dp"
        android:layout_weight="1.0" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="12dp">
                <EditText
                    android:id="@+id/Name"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:singleLine="true"
                    android:hint="@string/edit_connection_name_hint"
                    android:inputType="textNoSuggestions" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="12dp">
                <EditText
                    android:id="@+id/Host"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:singleLine="true"
                    android:inputType="textUri|textNoSuggestions"
                    android:hint="@string/edit_connection_host_hint"  />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="12dp">
                <EditText
                    android:id="@+id/PortNumber"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:singleLine="true"
                    android:inputType="number"
                    android:hint="@string/edit_connection_port_hint" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="12dp">
                <EditText
                    android:id="@+id/Password"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:singleLine="true"
                    android:inputType="textPassword"
                    android:hint="@string/edit_connection_password_hint" />
            </com.google.android.material.textfield.TextInputLayout>

        </LinearLayout>

    </ScrollView>

    <View
        android:background="@android:drawable/divider_horizontal_dark"
        android:layout_width="fill_parent"
        android:layout_height="1dp" />

    <!--  footer (ok, cancel buttons) -->
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="48dp"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/CancelButton"
            android:background="@drawable/listview_item_background"
            android:focusable="true"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:gravity="center"
            android:textStyle="bold"
            android:layout_weight="0.5"
            android:clickable="true"
            android:text="@string/button_cancel" />
        <View
            android:background="@android:drawable/divider_horizontal_dark"
            android:layout_width="1dp"
            android:layout_height="fill_parent" />

        <TextView
            android:id="@+id/OkButton"
            android:background="@drawable/listview_item_background"
            android:focusable="true"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:gravity="center"
            android:textStyle="bold"
            android:layout_weight="0.5"
            android:clickable="true"
            android:text="@string/button_ok" />

    </LinearLayout>

</LinearLayout>
