<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/ConnectionManagerView"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">

    <include layout="@layout/toolbar"/>

    <ScrollView
        android:layout_below="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:text="@string/verify_connection_header" />

            <TextView
                style="@style/FingerprintText"
                android:id="@+id/VerifyFingerprint"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

        </LinearLayout>

    </ScrollView>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="48dp"
        android:layout_alignParentBottom="true"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/EditConnectionsButton"
            android:background="@drawable/listview_item_background"
            android:focusable="true"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:gravity="center"
            android:textStyle="bold"
            android:layout_weight="0.5"
            android:clickable="true"
            android:text="@string/button_edit_connections" />
        <View
            android:background="@android:drawable/divider_horizontal_dark"
            android:layout_width="1dp"
            android:layout_height="fill_parent" />

        <TextView
            android:id="@+id/VerifyButton"
            android:background="@drawable/listview_item_background"
            android:focusable="true"
            android:layout_weight="0.5"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:gravity="center"
            android:textStyle="bold"
            android:clickable="true"
            android:text="@string/button_verify" />

    </LinearLayout>



</RelativeLayout>
